<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:minWidth="300dp"
              android:orientation="vertical">

    <TextView
        android:id="@+id/textview_header"
        style="@style/match_wrap"
        android:background="@color/colorAccent"
        android:fontFamily="@string/font_family_regular"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/app_name"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/textview_message"
        style="@style/match_wrap"
        android:layout_margin="20dp"
        android:fontFamily="@string/font_family_regular"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:text="@string/payment_type"
        android:textColor="@android:color/darker_gray"/>


    <EditText
        android:id="@+id/etDeliveryLocation"
        android:layout_marginLeft="10dp"
        android:hint="Enter delivery location"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:maxLines="4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etLandmark"
        android:layout_marginLeft="10dp"
        android:hint="Enter land mark"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        style="@style/match_wrap"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview_ok"
            style="@style/match_wrap"
            android:layout_weight="50"
            android:background="@color/colorAccent"
            android:fontFamily="@string/font_family_regular"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/cash_on_delivery"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/textview_cancel"
            style="@style/match_wrap"
            android:layout_marginLeft="1dp"
            android:layout_weight="50"
            android:background="@color/colorAccent"
            android:fontFamily="@string/font_family_regular"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/online_payment"
            android:textColor="@android:color/white"/>


    </LinearLayout>
</LinearLayout>